tests/invalid/VarDecl_Invalid_1.whiley
import * from whiley.lang.*

method main(System.Console sys) -> void:
    int x = y
    sys.out.println(Any.toString(x))
